--- a/pages/recipes/[slug].module.css
+++ b/pages/recipes/[slug].module.css
@@ -11,6 +11,7 @@
 }
 
 .mainImageContain img{
+  height: 100%;
   width: 100%;
   object-fit: cover;
 }
@@ -91,6 +92,7 @@
 }
 
 .imageContain img{
+  height: 100%;
   width: 100%;
   object-fit: contain;
 }
