--- a/pages/_app.module.css
+++ b/pages/_app.module.css
@@ -14,6 +14,12 @@
 .wrap {
   max-width: 1200px;
   margin: 0 auto;
-  padding: 40px 20px 80px 20px;
+  padding: 20px;
   width: 100%;
+}
+
+@media screen and ( min-width: 769px ) {
+  .wrap {
+    padding: 40px 20px 80px 20px;
+  }
 }
