finished styling recipe list and recipe

--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -5,6 +5,10 @@
   left: -9999px;
 }
 
+.searchBar {
+  display: flex;
+}
+
 .search {
   background: #4e5052;
   bordeR: 1px solid #adadad;
@@ -86,6 +90,38 @@
   width: 100%;
 }
 
+.favoriteButton {
+  background: none;
+  border: 1px solid #878787;
+  border-radius: 50%;
+  color: #878787;
+  cursor: pointer;
+  display: flex;
+  flex: 0 0 40px;
+  margin-left: 20px;
+  padding: 10px;
+  transition: border 125ms ease;
+}
+
+.favoriteButtonActive {
+  background: none;
+  border: 1px solid #FF725C;
+  border-radius: 50%;
+  color: #FF725C;
+  cursor: pointer;
+  display: flex;
+  flex: 0 0 40px;
+  margin-left: 20px;
+  padding: 10px;
+  transition: border 125ms ease;
+}
+
+.favoriteButton svg,
+.favoriteButtonActive svg{
+  height: 20px;
+  width: 20px;
+}
+
 @media screen and (min-width: 769px) {
   .recipesList {
     gap: 40px;
@@ -93,7 +129,14 @@
   }
 
   .search {
-    margin-bottom: 20px;
     width: 360px;
+  }
+
+  .searchBar {
+    margin-bottom: 40px;
+  }
+
+  .favoriteButton, .favoriteButtonActive {
+    margin-left: 40px;
   }
 }
