--- a/pages/recipes/[slug].module.css
+++ b/pages/recipes/[slug].module.css
@@ -1,31 +1,58 @@
 .page{
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr;
   gap: 20px;
   flex-wrap: wrap;
 }
 
 .mainImageContain {
+  background: #4e5052;
+  box-shadow:
+    0.6px 0.5px 1.1px rgba(0, 0, 0, 0.02),
+    1.5px 1.1px 2.7px rgba(0, 0, 0, 0.028),
+    2.9px 2.1px 5px rgba(0, 0, 0, 0.035),
+    5.1px 3.8px 8.9px rgba(0, 0, 0, 0.042),
+    9.6px 7.1px 16.7px rgba(0, 0, 0, 0.05),
+    23px 17px 40px rgba(0, 0, 0, 0.07)
+  ;
   flex: 1 0 100%;
   height: 250px;
   position: relative;
 }
 
 .mainImageContain img{
+
   height: 100%;
   width: 100%;
   object-fit: cover;
 }
 
 .page ul {
+
+  background: #4e5052;
+  box-shadow:
+    0.6px 0.5px 1.1px rgba(0, 0, 0, 0.02),
+    1.5px 1.1px 2.7px rgba(0, 0, 0, 0.028),
+    2.9px 2.1px 5px rgba(0, 0, 0, 0.035),
+    5.1px 3.8px 8.9px rgba(0, 0, 0, 0.042),
+    9.6px 7.1px 16.7px rgba(0, 0, 0, 0.05),
+    23px 17px 40px rgba(0, 0, 0, 0.07)
+  ;
   flex: 1 0 100%;
   margin: 0;
-  padding: 0;
+  padding: 20px;
 }
 
 @media screen and ( min-width: 768px) {
+  .page{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+
   .mainImageContain {
     flex: 1 0 calc(50% - 20px);
-    height: 400px;
+    height: 100%;
+    min-height: 400px;
   }
 
   .page ul {
@@ -94,7 +121,7 @@
 .imageContain img{
   height: 100%;
   width: 100%;
-  object-fit: contain;
+  object-fit: cover;
 }
 
 .contentContain {
@@ -116,4 +143,8 @@
   ;
   margin-top: 20px;
   padding: 20px;
+}
+
+.textContain {
+  max-width: 800px;
 }
