add sanity list for sorting groceries

--- a/pages/recipes/[slug].module.css
+++ b/pages/recipes/[slug].module.css
@@ -103,6 +103,12 @@
   }
 }
 
+@media screen and ( max-width: 600px ) {
+  .ingredientContain button {
+    width: 100%;
+  }
+}
+
 .title h1 {
   margin-right: 20px;
 }
